[FIX] website: restore parallax design
Commit https://github.com/odoo/odoo/commit/cf5b3e1db5d312133eb1af7ff0d5471db47987e5
fixed a problem by creating another one: the parallax with a given speed
appeared broken on page load (which is even more visible in 13.0 with
lazy loading).

This commit restores the design and solves the original problem.

closes odoo/odoo#41572

X-original-commit: a9aa72ecb5350cc0e9fa5b6a17d4db8d2f1895fd

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -891,6 +891,12 @@ table.table_desc tr td {
 .parallax {
     position: relative;
 
+    // TODO this introduces a limitation: no dropdown will be able to
+    // overflow. Maybe there is a better way to find.
+    &:not(.s_parallax_no_overflow_hidden) {
+        overflow: hidden;
+    }
+
     > * {
         position: relative;
     }
